Calendar header added.

--- a/assets/scss/_modal.scss
+++ b/assets/scss/_modal.scss
@@ -93,7 +93,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
   }
   &--content--left {
     width: 275px;
@@ -154,7 +153,98 @@
 
   &--content--right {
     width: 375px;
-    padding: 20px 20px 0 30px;
-
+    padding: 20px 20px 0 20px;
+    align-items: flex-start;
   }
+  &--calendar--header{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 21px;
+  }
+  &--calendar--arrow--left{
+    width: 4px;
+    height: 8px;
+    background-image: url("../img/left_arrow.svg");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    margin-left: 11px;
+    cursor: pointer;
+  }
+  &--calendar--arrow--right{
+    width: 4px;
+    height: 8px;
+    background-image: url("../img/right-arrow.svg");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    margin-right: 11px;
+    cursor: pointer;
+  }
+  &--calendar--month--name{
+    font-size: 16px;
+    color: #333333;
+    line-height: 22px;
+    font-family: Open sans, sans-serif;
+    font-weight: 700;
+    position: relative;
+    &::before {
+      content: "";
+      display: block;
+      width: 15px;
+      height: 16px;
+      background-image: url("../img/calendar.svg");
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+      position: absolute;
+      top: 2px;
+      left: -19px;
+    }
+    &::after {
+      content: "";
+      display: block;
+      width: 8px;
+      height: 4px;
+      background-image: url("../img/down-arrow.svg");
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+      position: absolute;
+      top: 9px;
+      right: -19px;
+    }
+  }
+  &--calendar--days{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  &--calendar--day{
+    width: 58px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  &--calendar--day--number{
+    font-size: 21px;
+    color: #15498F;
+    line-height: 25px;
+    font-family: Roboto, sans-serif;
+    font-weight: 400;
+  }
+  &--calendar--day--text{
+    font-size: 13px;
+    color: #BBBBBB;
+    line-height: 18px;
+    font-family: Open sans, sans-serif;
+    font-weight: 400;
+  }
+
+
 }
